# ai-native-methodology

./: .gitignore  .npmrc  .npmrc.template  CLAUDE.md  INSTALL-npm.md  INSTALL.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  marketplace.meta.json
.claude/plans/: B-shard-1.md  B-shard-2.md  B-shard-3.md  B-shard-4.md  C-industry-case.md  C-official-docs.md  D-senior-conscience.md  audit-skill-l3-report.md  gen-jira-workflow-diagram.py  gen-methodology-diagram.mjs  jira-workflow-diagram.excalidraw  methodology-diagram.spec.mjs  plan-a2-worktree-mode.md  plan-analysis-validator-poc06-11.md  (+119 more)
ai-native-methodology/: .gitignore  .mcp.json  CHANGELOG-HISTORY.md  CHANGELOG.md  README.md  package.json
docs/: add-a-plugin.md  plugin-usage-dashboard.md
plugins/devops/server/: README.md  pyproject.toml
plugins/devops/server/docs/: ARCHITECTURE.md  confluence-page.md
plugins/devops/server/src/illuminati_mcp/: __init__.py  backend.py  config.py  confluence.py  frontend.py  github.py  gitops.py  grafana.py  harbor.py  http.py  inventory.py  jenkins.py  jira.py  server.py
plugins/devops/server/tests/: test_backend_pure.py  test_config_pure.py  test_frontend_pure.py  test_gitops_pure.py  test_grafana_pure.py  test_harbor_pure.py  test_inventory_pure.py  test_jira_agg_pure.py  test_modules_pure.py
scripts/: _plugins.js  build-catalog.js  build-plugin.js  new-plugin.js  publish-catalog.js  publish.js  release-check.js  setup-git-hooks.js  version-check.js
(+3784 files in other folders)
