[project]
name = "illuminati-mcp"
version = "0.1.0"
description = "MIS DevOps illuminati MCP server (Grafana/JIRA/Confluence/Jenkins/GHE) over stdio"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
illuminati-mcp = "illuminati_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/illuminati_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
